# ratgreet

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  deploy.yml  doc.yml  fmt-clippy.yml  test.yml
docs/: PLAN.md
examples/: cli.md  config.toml  greetd_config.toml  theme.toml
libratgreet/: Cargo.toml
libratgreet/src/event/: mod.rs
libratgreet/src/info/: mod.rs
libratgreet/src/keyboard/: mod.rs  tests.rs
libtuigreet/: Cargo.toml
libtuigreet/src/: lib.rs  macros.rs
libtuigreet/src/event/: mod.rs
libtuigreet/src/greeter/: mod.rs
libtuigreet/src/info/: mod.rs
libtuigreet/src/ipc/: mod.rs
libtuigreet/src/keyboard/: mod.rs
libtuigreet/src/power/: mod.rs
ratgreet/: Cargo.toml
ratgreet/src/: main.rs
ratgreet/src/app/: greeter_init.rs  mod.rs
ratgreet/src/config/: mod.rs  tests.rs
ratgreet/src/settings/: mod.rs  tests.rs
ratgreet/src/theme/: mod.rs  tests.rs
ratgreet/src/ui/: mod.rs  processing.rs  prompt.rs
ratgreet/src/ui/common/: menu.rs
ratgreet/src/ui/util/: mod.rs
src/: greeter.rs  info.rs  ipc.rs  keyboard.rs  macros.rs  main.rs
src/integration/: display.rs  menus.rs  remember.rs
src/integration/common/: mod.rs  output.rs
src/ui/: command.rs  mod.rs  power.rs  processing.rs  prompt.rs  sessions.rs  users.rs  util.rs
src/ui/common/: masked.rs  menu.rs  style.rs
tests/: Cargo.toml
tests/src/: display.rs  exit.rs  lib.rs  menus.rs  movement.rs
tests/src/common/: mod.rs
tuigreet/: Cargo.toml
tuigreet/src/: color.rs  lib.rs  macros.rs  main.rs
tuigreet/src/app/: greeter_init.rs  mod.rs
tuigreet/src/config/: mod.rs  tests.rs
tuigreet/src/settings/: greeter_init.rs  mod.rs  tests.rs
tuigreet/src/theme/: mod.rs  tests.rs
tuigreet/src/ui/: command.rs  mod.rs  processing.rs  prompt.rs
tuigreet/src/ui/common/: menu.rs  style.rs
tuigreet/src/ui/util/: mod.rs  tests.rs
