[package]
name = "libtuigreet"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
test-harness = []

[dependencies]
smart-default = "0.7"
chrono.workspace = true
crossterm.workspace = true
futures = "0.3"
greetd_ipc.workspace = true
rustix.workspace = true
rust-ini = "0.21"
tokio = { workspace = true, features = [
  "net",
  "sync",
  "time",
  "process",
] }
zeroize = "1"
uzers = "0.12"
tracing-appender.workspace = true
tracing.workspace = true
utmp-rs = "0.3"

[dev-dependencies]
tempfile.workspace = true
