[package]
name = "tuigreet-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
libtuigreet = { path = "../libtuigreet", features = ["test-harness"] }
tuigreet = { path = "../tuigreet", features = ["test-harness"] }
chrono.workspace = true
greetd-stub = "0.3"
tempfile.workspace = true
unicode-width = "0.2"
crossterm.workspace = true
tokio = { workspace = true, features = [
  "net",
  "sync",
  "time",
  "process",
] }
ratatui.workspace = true
