[package]
name = "tuigreet"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tuigreet"
path = "src/lib.rs"

[[bin]]
name = "tuigreet"
path = "src/main.rs"

[features]
test-harness = ["libtuigreet/test-harness"]

[dependencies]
libtuigreet = { path = "../libtuigreet" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1.1"
chrono.workspace = true
crossterm.workspace = true
greetd_ipc.workspace = true
tokio.workspace = true
ratatui.workspace = true
tracing-appender.workspace = true
tracing-subscriber = "0.3"
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
